# streamfinder

./: README.md  package-lock.json  package.json  svelte.config.js
Documents/claude/csfd/: .env.example  .gitignore  docker-compose.yml  pyproject.toml
Documents/claude/csfd/.github/workflows/: deploy-streamfinder.yml
Documents/claude/csfd/config/: selectors.json
Documents/claude/csfd/db/: schema.sql
Documents/claude/csfd/db/migrations/: 002_normalize_reviews.sql  003_streamfinder_fields.sql
Documents/claude/csfd/docs/brainstorms/: 2026-04-10-html-cache-layer-brainstorm.md  2026-04-10-parsing-field-definitions-brainstorm.md
Documents/claude/csfd/docs/plans/: 2026-04-09-feat-vod-dashboard-generation-plan.md  2026-04-09-feat-vod-scraping-pipeline-plan.md  2026-04-10-feat-html-cache-layer-plan.md  2026-04-10-feat-parser-rewrite-full-field-extraction-plan.md  2026-04-11-feat-dashboard-pipeline-json-export-plan.md
Documents/claude/csfd/scripts/: validate_selectors.py
Documents/claude/csfd/src/csfd_vod/: __init__.py  config.py  dashboard.py  logger.py  main.py
Documents/claude/csfd/src/csfd_vod/cache/: __init__.py  html_cache.py
Documents/claude/csfd/src/csfd_vod/enrichment/: __init__.py  tmdb_enricher.py
Documents/claude/csfd/src/csfd_vod/export/: __init__.py  dashboard_generator.py  exporter.py  streamfinder_exporter.py
Documents/claude/csfd/streamfinder/: svelte.config.js
Documents/claude/csfd/streamfinder/src/: app.html
Documents/claude/csfd/tests/: test_exporter.py  test_integration_phase2.py  test_parser.py
src/: app.css  app.html
(+43 files in other folders)
